fix spacing for mobile

--- a/packages/opub-ui/assets/base.css
+++ b/packages/opub-ui/assets/base.css
@@ -3,7 +3,7 @@ body {
   line-height: 150%;
   box-sizing: border-box;
   font-family: var(--primary-font);
-  --outline: 2px solid var(--focused);
+  --outline: 2px solid var(--text-interactive);
   --outline-offset: 2px;
 }
 
