--- a/packages/opub-ui/src/components/IconButton/IconButton.module.scss
+++ b/packages/opub-ui/src/components/IconButton/IconButton.module.scss
@@ -17,7 +17,7 @@
   }
 
   &:hover {
-    background: var(--surface-selected);
+    // background: var(--surface-selected);
     outline: var(--border-width-1) solid transparent;
   }
 
@@ -29,7 +29,7 @@
   }
 
   &:active {
-    background: var(--surface-selected);
+    // background: var(--surface-selected);
     box-shadow: var(--shadow-button-default);
 
     &::after {
@@ -39,7 +39,7 @@
   }
 
   &.pressed {
-    background: var(--surface-selected);
+    // background: var(--surface-selected);
     box-shadow: var(--shadow-button-pressed);
 
     @include recolor-icon(currentColor);
